--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- Feature Section -->
     <section class="max-w-screen-xl mx-auto px-4 py-5 my-10 md:px-8 lg:px-16">
       <div>
-        <h1 class="text-2xl md:text-5xl text-first font-bold text-center mt-5">Our Featured Products</h1>
+        <h1 class="text-3xl md:text-5xl text-first font-bold text-center mt-5">Our Featured Products</h1>
         <p class="lg:max-w-3xl mb-10 mx-auto text-center my-5">There are many variations of passages of Lorem Ipsum
           available, but the majority have suffered alteration in some form, by injected humour, or randomised words
           which don't look even slightly believable.
@@ -149,6 +149,42 @@
         </div>
       </div>
 
+    </section>
+    <!-- News Section -->
+    <section class="max-w-screen-xl mx-auto px-4 py-5 my-10 md:px-8 lg:px-16">
+          <h1 class="text-3xl md:text-5xl text-first font-bold text-center mt-5">News & Events</h1>
+          <p class="lg:max-w-3xl mb-10 mx-auto text-center my-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+          <div class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-3">
+            <!-- Cards -->
+            <div class="card shadow-xl">
+              <figure><img src="./images/news-1.png" alt="News" /></figure>
+              <div class="card-body">
+                <p class="text-second">Feb 05, 2027</p>
+                <h2 class="card-title text-2xl">Collecting 8 points for discount</h2>
+                <p class="text-second">There are many variations of passages of Lorem Ipsum available.</p>
+                <h5 class="font-semibold">Learn More</h5>
+              </div>
+            </div>
+            <div class="card shadow-xl">
+              <figure><img src="./images/news-2.png" alt="News" /></figure>
+              <div class="card-body">
+                <p class="text-second">Feb 05, 2027</p>
+                <h2 class="card-title text-2xl">Collecting 8 points for discount</h2>
+                <p class="text-second">There are many variations of passages of Lorem Ipsum available.</p>
+                <h5 class="font-semibold">Learn More</h5>
+              </div>
+            </div>
+            <div class="card shadow-xl">
+              <figure><img src="./images/news-3.png" alt="News" /></figure>
+              <div class="card-body">
+                <p class="text-second">Feb 05, 2027</p>
+                <h2 class="card-title text-2xl">Collecting 8 points for discount</h2>
+                <p class="text-second">There are many variations of passages of Lorem Ipsum available.</p>
+                <h5 class="font-semibold">Learn More</h5>
+              </div>
+            </div>
+          </div>  
+      </p>
     </section>
 
   </main>
