--- a/index.html
+++ b/index.html
@@ -150,48 +150,102 @@
       </div>
 
     </section>
+
+    <!-- Clients Section -->
+    <section class="max-w-screen-xl mx-auto px-4 md:px-8 lg:px-16">
+      <div class="flex flex-col md:flex-row gap-12 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-8 lg:px-16 py-24">
+        <div class="flex items-center flex-1">
+          <div class="space-y-5">
+            <h1 class="text-4xl text-white font-bold">Meet Our Super <br>Clients</h1>
+            <p class="text-second lg:pr-20">There are many variations of passages of Lorem Ipsum available, but the
+              majority have suffered alteration in some form, by injected humour, or randomised words which don't look
+              even slightly believable.</p>
+            <button class="btn btn-primary">Show All</button>
+          </div>
+        </div>
+        <div class="flex-1 relative">
+          <div class="relative z-10 opacity-40 px-6 pt-8 pb-4 mb-10 rounded-lg bg-white">
+            <img class="absolute -left-7 -top-7 border-4 border-white rounded-full bg-white" src="./images/client.png"
+              alt="">
+            <p class="text-second">
+              We are providing the best and suitable home insurance services for the people who are interested to
+              treatment.
+            </p>
+            <h3 class="text-xl font-semibold mt-5">Ilham Yuda</h3>
+            <p class="second-text">Businessman</p>
+            <div class="flex justify-end">
+              <img src="./images/circles.png" alt="">
+            </div>
+          </div>
+          <div class="absolute z-20 px-6 pt-8 pb-4 top-28  lg:-left-24 lg:w-[450px] rounded-lg bg-white">
+            <img class="absolute -left-7 -top-7 border-4 border-white rounded-full bg-white" src="./images/client.png"
+              alt="">
+            <p class="text-second">
+              We are providing the best and suitable home insurance services for the people who are interested to
+              treatment.
+            </p>
+            <h3 class="text-xl font-semibold mt-5">Ilham Yuda</h3>
+            <p class="second-text">Businessman</p>
+            <div class="flex justify-end">
+              <img src="./images/circles.png" alt="">
+            </div>
+          </div>
+          <div class="relative z-10 opacity-40 px-6 pt-8 pb-4 rounded-lg bg-white">
+            <img class="absolute -left-7 -top-7 border-4 border-white rounded-full bg-white" src="./images/client.png"
+              alt="">
+            <p class="text-second">
+              We are providing the best and suitable home insurance services for the people who are interested to
+              treatment.
+            </p>
+            <h3 class="text-xl font-semibold mt-5">Ilham Yuda</h3>
+            <p class="second-text">Businessman</p>
+            <div class="flex justify-end">
+              <img src="./images/circles.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- News Section -->
     <section class="max-w-screen-xl mx-auto px-4 py-5 my-10 md:px-8 lg:px-16">
-          <h1 class="text-3xl md:text-5xl text-first font-bold text-center mt-5">News & Events</h1>
-          <p class="lg:max-w-3xl mb-10 mx-auto text-center my-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
-          <div class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-3">
-            <!-- Cards -->
-            <div class="card shadow-xl">
-              <figure><img src="./images/news-1.png" alt="News" /></figure>
-              <div class="card-body">
-                <p class="text-second">Feb 05, 2027</p>
-                <h2 class="card-title text-2xl">Collecting 8 points for discount</h2>
-                <p class="text-second">There are many variations of passages of Lorem Ipsum available.</p>
-                <h5 class="font-semibold">Learn More</h5>
-              </div>
-            </div>
-            <div class="card shadow-xl">
-              <figure><img src="./images/news-2.png" alt="News" /></figure>
-              <div class="card-body">
-                <p class="text-second">Feb 05, 2027</p>
-                <h2 class="card-title text-2xl">Collecting 8 points for discount</h2>
-                <p class="text-second">There are many variations of passages of Lorem Ipsum available.</p>
-                <h5 class="font-semibold">Learn More</h5>
-              </div>
-            </div>
-            <div class="card shadow-xl">
-              <figure><img src="./images/news-3.png" alt="News" /></figure>
-              <div class="card-body">
-                <p class="text-second">Feb 05, 2027</p>
-                <h2 class="card-title text-2xl">Collecting 8 points for discount</h2>
-                <p class="text-second">There are many variations of passages of Lorem Ipsum available.</p>
-                <h5 class="font-semibold">Learn More</h5>
-              </div>
-            </div>
-          </div>  
+      <h1 class="text-3xl md:text-5xl text-first font-bold text-center mt-5">News & Events</h1>
+      <p class="lg:max-w-3xl mb-10 mx-auto text-center my-5">There are many variations of passages of Lorem Ipsum
+        available, but the majority have suffered alteration in some form, by injected humour, or randomised words which
+        don't look even slightly believable.
+      <div class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-3">
+        <!-- Cards -->
+        <div class="card shadow-xl">
+          <figure><img src="./images/news-1.png" alt="News" /></figure>
+          <div class="card-body">
+            <p class="text-second">Feb 05, 2027</p>
+            <h2 class="card-title text-2xl">Collecting 8 points for discount</h2>
+            <p class="text-second">There are many variations of passages of Lorem Ipsum available.</p>
+            <h5 class="font-semibold">Learn More</h5>
+          </div>
+        </div>
+        <div class="card shadow-xl">
+          <figure><img src="./images/news-2.png" alt="News" /></figure>
+          <div class="card-body">
+            <p class="text-second">Feb 05, 2027</p>
+            <h2 class="card-title text-2xl">Collecting 8 points for discount</h2>
+            <p class="text-second">There are many variations of passages of Lorem Ipsum available.</p>
+            <h5 class="font-semibold">Learn More</h5>
+          </div>
+        </div>
+        <div class="card shadow-xl">
+          <figure><img src="./images/news-3.png" alt="News" /></figure>
+          <div class="card-body">
+            <p class="text-second">Feb 05, 2027</p>
+            <h2 class="card-title text-2xl">Collecting 8 points for discount</h2>
+            <p class="text-second">There are many variations of passages of Lorem Ipsum available.</p>
+            <h5 class="font-semibold">Learn More</h5>
+          </div>
+        </div>
+      </div>
       </p>
     </section>
-
   </main>
   <footer>
-
   </footer>
-
 </body>
-
 </html>
