--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
       theme: {
         extend: {
           colors: {
-            clifford: '#da373d',
             'text-first': '#1C1C1C',
             'text-second': '#777',
             'gradient-start': '#FF8938',
@@ -153,14 +152,14 @@
 
     <!-- Clients Section -->
     <section class="max-w-screen-xl mx-auto px-4 md:px-8 lg:px-16">
-      <div class="flex flex-col md:flex-row gap-12 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-8 lg:px-16 py-24">
+      <div class="flex flex-col md:flex-row gap-12 rounded-xl bg-gradient-to-r from-gradient-start to-gradient-end px-8 lg:px-16 py-24">
         <div class="flex items-center flex-1">
           <div class="space-y-5">
             <h1 class="text-4xl text-white font-bold">Meet Our Super <br>Clients</h1>
             <p class="text-second lg:pr-20">There are many variations of passages of Lorem Ipsum available, but the
               majority have suffered alteration in some form, by injected humour, or randomised words which don't look
               even slightly believable.</p>
-            <button class="btn btn-primary">Show All</button>
+            <button class="btn bg-white text-orange-600 normal-case">Show All</button>
           </div>
         </div>
         <div class="flex-1 relative">
@@ -245,7 +244,51 @@
       </p>
     </section>
   </main>
-  <footer>
+  <footer class="p-5 lg:px-48 lg:py-10 bg-base-200 text-base-content">
+      <div class="flex justify-between my-20">
+        <img src="./images/cup.png" alt="">
+        <p>
+          <span>Ready to get strated?</span>
+          <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Get Started</button>
+        </p>
+      </div>
+      <div class="footer">
+          <div>
+            <span class="footer-title">Services</span> 
+            <a class="link link-hover">Branding</a> 
+            <a class="link link-hover">Design</a> 
+            <a class="link link-hover">Marketing</a> 
+            <a class="link link-hover">Advertisement</a>
+          </div> 
+          <div>
+            <span class="footer-title">Company</span> 
+            <a class="link link-hover">About us</a> 
+            <a class="link link-hover">Contact</a> 
+            <a class="link link-hover">Jobs</a> 
+            <a class="link link-hover">Press kit</a>
+          </div> 
+          <div>
+            <span class="footer-title">Legal</span> 
+            <a class="link link-hover">Terms of use</a> 
+            <a class="link link-hover">Privacy policy</a> 
+            <a class="link link-hover">Cookie policy</a>
+          </div> 
+          <div>
+            <span class="footer-title">Newsletter</span> 
+            <div class="form-control w-80">
+              <label class="label">
+                <span class="label-text">Email Address</span>
+              </label> 
+              <div class="relative">
+                <input type="text" class="py-4 bg-transparent border-b-2 border-black outline-none" /> 
+                <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white rounded-full"><i class="fa-solid fa-chevron-right" style="color: #ffffff;"></i></button>
+              </div>
+            </div>
+          </div>
+      </div>
+      <div class="mt-10 text-center">
+        <p>Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+      </div>
   </footer>
 </body>
 </html>
